k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: supplytracker
  labels:
    name: supplytracker
    environment: production
